# SwiftRos2

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.runtime  LICENSE  README.md  docker-compose.dev.yml  docker-compose.runtime.yml  docker-compose.yml  entrypoint.sh  swiftros2.geany  switfros2.geany
.devcontainer/: devcontainer.json
Book/: GettingStarted.md  KinematicsNode.md  README.md
controller_node/: CMakeLists.txt  package.xml
controller_node/src/: uarm_controller.cpp
ide/: README.md
kinematics_node/: CMakeLists.txt  package.xml
kinematics_node/src/: kinematics_node.cpp
messaging/action/: MoveArm.action
messaging/srv/: MoveToPosition.srv
remote_node/: CMakeLists.txt  package.xml
remote_node/config/: uarm_config.rviz
remote_node/launch/: swiftpro.rviz  view_robot.launch.py  view_robot_urdf.launch.py
remote_node/urdf/: swiftpro.xacro
swiftpro_control/: CMakeLists.txt  package.xml
swiftpro_control/src/: swiftpro_control.cpp
swiftpro_hardware/: CMakeLists.txt  package.xml
swiftpro_hardware/lib/: CMakeLists.txt
swiftpro_hardware/lib/include/uarm/: uarm.h
swiftpro_hardware/lib/src/: uarm.cc
swiftpro_hardware/src/: swiftpro_hardware.cpp
swiftpro_kinematics/: CMakeLists.txt  package.xml
swiftpro_kinematics/include/swiftpro_kinematics/: kinematics.hpp
swiftpro_kinematics/src/: swiftpro_kinematics.cpp
swiftpro_resources/: CMakeLists.txt  package.xml
swiftpro_resources/launch/: view_robot_urdf.launch.py
swiftpro_resources/messaging/msg/: MoveToPosition.msg
swiftpro_resources/messaging/srv/: AnglesToCoord.srv  ComputeFK.srv  ComputeIK.srv  CoordToAngles.srv  GetAnalog.srv  GetDigital.srv  GetEncoderStatus.srv  GetServoAttach.srv  IsReachable.srv  MotionReset.srv  MoveTo.srv  MoveToPosition.srv  PauseMotion.srv  Reset.srv  ResumeMotion.srv  SendRaw.srv  SetAcceleration.srv  SetBuzzer.srv  SetDigitalDirection.srv  SetDigitalOutput.srv  SetGripper.srv  SetMode.srv  SetPolar.srv  SetPump.srv  SetServoAngle.srv  SetServoAngles.srv  SetServoAttach.srv  SetWrist.srv  SmoothMove.srv
swiftpro_resources/urdf/: swiftpro.xacro
swiftpro_resources/visualizer_config/: swiftpro-dual-instance.rviz  swiftpro.rviz
