<?xml version="1.0"?>
<package format="3">
  <name>controller_node</name>
  <version>0.0.1</version>
  <description>Controller node for uArm Swift Pro</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
