<?xml version="1.0"?>
<package format="3">
  <name>swiftpro_hardware</name>
  <version>0.0.1</version>
  <description>Hardware control node (via USB serial) for uArm Swift Pro</description>
  <maintainer email="smith.jack.sidman@gmail.com">Jack Sidman Smith</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>swiftpro_kinematics</depend>
  <depend>swiftpro_resources</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
