<?xml version="1.0"?>
<package format="3">
  <name>swiftpro_kinematics</name>
  <version>0.0.1</version>
  <description>Kinematics node node for uArm Swift Pro</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
