<?xml version="1.0"?>
<package format="3">
  <name>swiftpro_resources</name>
  <version>0.0.1</version>
  <description>Resources (URDF, meshes, launchers, messages, services and actions) for uArm Swift Pro</description>
  <maintainer email="smith.jack.sidman@gmail.com">Jack Sidman Smith</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
